# openmc-metal

./: .gitignore  Package.swift  README.md
Benchmarks/: run_benchmarks.sh
Sources/OpenMCMetal/App/: OpenMCMetalApp.swift
Sources/OpenMCMetal/Benchmark/: BenchmarkRunner.swift  C5G7Geometry.swift  PincellBenchmark.swift  ReferenceData.swift  XSBench.swift
Sources/OpenMCMetal/Core/: KEigenvalue.swift  MetalEngine.swift  ParticleBuffer.swift  PhiloxRNG.swift  ShaderSource.swift  Simulation.swift  Types.swift
Sources/OpenMCMetal/Geometry/: Cell.swift  Lattice.swift  Surface.swift
Sources/OpenMCMetal/Physics/: Collision.swift  CrossSection.swift  TransportKernels.swift
Sources/OpenMCMetal/Tally/: Statistics.swift  (+2 more)
Sources/Shaders/: Collision.metal  Common.metal  Geometry.metal  Tally.metal  Transport.metal  XSLookup.metal
Tests/OpenMCMetalTests/: GeometryTests.swift  OpenMCMetalTests.swift  RNGTests.swift  TransportTests.swift
python/: README.md  benchmark_results.json  pyproject.toml
python/paper/: generate_figures.py  openmc_metal_paper.tex  references.bib
python/src/openmc_metal/: __init__.py  collision.py  cross_sections.py  engine.py  geometry.py  keigenvalue.py  particles.py  rng.py  shaders.py  simulation.py  statistics.py  tally.py  transport.py  types.py
python/src/openmc_metal/benchmarks/: assembly.py  c5g7_geometry.py  cpu_baseline.py  pincell.py  reference_data.py  runner.py  xsbench.py
python/src/openmc_metal/persistent/: __init__.py  engine.py  shader.py  simulation.py
python/src/openmc_metal/report/: charts.py  pdf_report.py
